--- a/src/index.scss
+++ b/src/index.scss
@@ -113,3 +113,14 @@ strong {
     border-radius: 5px;
   }
 }
+
+.loading {
+  padding: 2em;
+  font-size: 20pt;
+}
+.error {
+  padding: 2em;
+}
+.muted {
+  color: #777777;
+}
