--- a/src/pages/activity.scss
+++ b/src/pages/activity.scss
@@ -37,10 +37,11 @@ header.masthead {
       color: $accent-color;
     }
     .meta {
+      color: #bbb;
       line-height: 1.1;
       display: block;
       font-size: 20px;
-      font-weight: 300;
+      font-weight: 400;
       a {
         font-weight: 500;
       }
