--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,7 @@ h6 {
 a {
   color: $accent-color;
   transition: color 0.1s;
+  text-decoration: none;
   &:hover {
     color: lighten($color: $accent-color, $amount: 15%);
     text-decoration: none;
